Project

General

Profile

Actions

Bug #17806

closed

OSD: do not open pgs when the pg is not in pg_map

Added by Xinze Chi over 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Low
Assignee:
-
Category:
Code Hygiene
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
OSD
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

the pg may be removed before the C_OpenPGs callbacked by finisher

Actions #1

Updated by Greg Farnum almost 7 years ago

  • Project changed from Ceph to RADOS
  • Category set to Code Hygiene
  • Priority changed from Normal to Low
  • Component(RADOS) OSD added

Without more details I'm not sure this assessment is actually correct...

Actions #2

Updated by Xinze Chi almost 7 years ago

The PR is merged to upstream. https://github.com/ceph/ceph/pull/11803. So please close it. Thanks.

Actions #3

Updated by Greg Farnum almost 7 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF