OSD: do not open pgs when the pg is not in pg_map

the pg may be removed before the C_OpenPGs callbacked by finisher

Fixes: http://tracker.ceph.com/issues/17806
Signed-off-by: Xinze Chi <xinze@xsky.com>